--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "package.json": "^2.0.1"
   }
 }
