--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,12 +1,18 @@
-# Node.js
-node_modules/
+# Dependencies
+node_modules
+/.pnp
+.pnp.js
 
-# Logs
+# Testing
+/coverage
+
+# Production
+/build
+
+# Logs and Runtime Data
 logs
 *.log
 npm-debug.log*
-
-# Runtime data
 pids
 *.pid
 *.seed
@@ -33,8 +39,6 @@ build/Release
 # Dependency directories
 .idea/
 .vscode/
-node_modules/
-.DS_Store
 
 # Optional npm cache directory
 .npm
@@ -55,8 +59,10 @@ yarn-error.log
 
 # dotenv environment variables file
 .env
-.env.test
-.env.production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # macOS
 .DS_Store
