--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "Mern project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "jest",
+    "start": "nodemon index.js",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,11 @@
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "package.json": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
   }
 }
