--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "nodemon index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start":"nodemon index.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
